Driver OpenAPI schema
